# TuiDo365

./: .gitignore  AGENTS.md  CLAUDE.md  INSTALLATION.md  QUICKSTART.md  README.md  pyproject.toml
.ralph/: smart-views.md  tui-improvements.md  tui-improvements.state.json
docs/: TUI-improvement-plan.md  architecture.md
docs/adr/: 0001-use-python-typer-textual.md  0002-use-msal-device-code.md  0003-use-sqlite-cache.md  0004-cli-and-tui-share-core.md
src/mtd/: __init__.py  __main__.py  main.py
src/mtd/app/: __init__.py
src/mtd/app/services/: auth_service.py  list_service.py  task_service.py
src/mtd/cli/: __init__.py  app.py  auth_commands.py  list_commands.py  task_commands.py  tui_command.py
src/mtd/domain/: __init__.py  errors.py  models.py
src/mtd/infra/: __init__.py  logging_setup.py
src/mtd/infra/auth/: msal_client.py  token_cache.py
src/mtd/infra/cache/: store.py
src/mtd/infra/config/: __init__.py  paths.py  settings.py
src/mtd/infra/graph/: __init__.py  client.py  todo_api.py
src/mtd/tui/: __init__.py  app.py
src/mtd/tui/screens/: add_task_screen.py  edit_task_screen.py  help_screen.py  main_screen.py
src/mtd/tui/widgets/: list_sidebar.py  status_bar.py  task_detail.py  task_table.py
tests/app/: test_auth_service.py  test_list_service.py  test_task_service.py
tests/cli/: test_auth_commands.py  test_list_commands.py  test_task_commands.py  test_tui_command.py
tests/domain/: test_errors.py  test_models.py
tests/infra/: test_cache_store.py  test_logging_setup.py  test_paths.py  test_settings.py
tests/infra/auth/: test_msal_client.py  test_token_cache.py
tests/infra/graph/: test_client.py  test_todo_api.py
tests/tui/: test_app.py
