[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "tuido365"
version = "0.1.0"
description = "Linux-first terminal client for Microsoft To Do"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Dustin Midyett" }
]
keywords = [
  "microsoft-todo",
  "microsoft-graph",
  "terminal",
  "cli",
  "tui",
  "linux"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Scheduling",
  "Topic :: Utilities"
]
dependencies = [
  "typer>=0.12,<1.0",
  "textual>=0.61,<1.0",
  "httpx>=0.27,<1.0",
  "msal>=1.31,<2.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "platformdirs>=4.2,<5.0",
  "rich>=13.7,<14.0",
  "tomli-w>=1.0,<2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-cov>=5.0,<6.0",
  "respx>=0.21,<1.0",
  "mypy>=1.10,<2.0",
  "ruff>=0.5,<1.0",
  "types-setuptools>=75.0.0.20240822"
]

[project.scripts]
tuido = "mtd.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mtd"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "SIM"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
pretty = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["msal.*", "textual.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/mtd"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
